# Rudolf-V

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: frontend-artifacts.yml  python-wheels.yml
benches/: benchmarks.rs  gpu_benchmarks.rs
crates/camera-geometry/: Cargo.toml
crates/camera-geometry-python/: Cargo.toml  pyproject.toml
crates/camera-geometry-python/python/camera_geometry/: __init__.py
crates/camera-geometry-python/src/: lib.rs
crates/camera-geometry-python/tests/: smoke.py
crates/camera-geometry/src/: lib.rs
docs/: python-wheel-spike.md
examples/: bench_euroc_cpu.rs  bench_euroc_gpu.rs  euroc_frontend.rs  euroc_live.rs  euroc_stereo.rs  gpu_euroc_live.rs  gpu_fast.rs  gpu_frontend.rs  gpu_pyramid.rs  make_synthetic_euroc.rs  tumvi_live.rs  tumvi_stereo.rs  visualize_fast.rs
src/: camera.rs  convert.rs  convolution.rs  essential.rs  fast.rs  frontend.rs  gradient.rs  harris.rs  histeq.rs  image.rs  klt.rs  klt_reference.rs  lib.rs  nms.rs  occupancy.rs  pyramid.rs  rigid_ransac.rs  shi_tomasi.rs  stereo.rs
src/gpu/: device.rs  fast.rs  frontend.rs  image.rs  klt.rs  mod.rs  pyramid.rs
src/shaders/: fast.wgsl  klt.wgsl  klt_warp.wgsl  nms.wgsl  pyramid.wgsl
tests/: test_fast.rs  test_frontend.rs  test_harris.rs  test_image.rs  test_klt.rs  test_pyramid.rs  test_shi_tomasi.rs
