[package]
name = "rudolf-v"
version = "0.1.0"
edition = "2021"
description = "RUst Device-Optimized Library for Frontend Vision"

[dependencies]
# Image I/O only -- NOT for algorithms
image = "0.25"
# Live visualization window (minimal framebuffer)
minifb = "0.27"
# Linear algebra (const-generic, stack-allocated) -- for geometric verification
lalir = { git = "https://github.com/twetto/lalir" }

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true

