[package]
name = "camera-geometry-python"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
camera-geometry = { path = "../camera-geometry" }
nalgebra = "0.33"
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py310"] }
